# geany

./: .gitignore  HACKING  Makefile.am  README  README.Packagers  configure.ac  geany.exe.manifest
data/: filetype_extensions.conf  filetypes.common  filetypes.css  filetypes.markdown  filetypes.python  filetypes.txt2tags  geany.css  geany.glade  ui_toolbar.xml
doc/: Makefile.am  geany.txt  interface.dox  interface.xslt  making-a-release  plugins.dox  pluginsymbols.c
extensions/demo/: Makefile.am  demo.c  demo.plugin
m4/: geany-darwin.m4  geany-enums.m4  geany-extensions.m4  geany-lib.m4
osx/: README  bundle.mk  geany.bundle  geany.conf  gtkrc  jhbuildrc-custom  launcher.sh  rebuild-gtk-stuff.sh
plugins/: Makefile.am  classbuilder.c  demoplugin.c  docdata.c  export.c  filebrowser.c  geanyfunctions.h  geanyplugin.h  htmlchars.c  saveactions.c  splitwindow.c
scintilla/: scss_support.patch
scripts/: bump.py  create_php_tags.php  gen-keywords.py  signalconn  win32-installer-msys2.nsi.in  win32-installer-msys2.sh
src/: Makefile.am  about.c  app.h  build.c  build.h  buildprivate.h  callbacks.c  callbacks.h  dialogs.c  dialogs.h  document.c  document.h  documentprivate.h  editor.c  editor.h  editorprefs.h  editorprivate.h  encodings.c  extensions.c  extensions.h  featureprovider.c  featureprovider.h  featureprovider.vala  filetypes.c  filetypes.h  filetypesprivate.h  ftplugins.c  ftplugins.h  geany.h  geanyenums.c  geanyenums.c.in  geanyenums.h  geanyenums.h.in  geanyobject.h  geanyscintilla.c  geanyscintilla.h  highlighter.c  highlighter.h  highlighter.vala  (+58 more)
(+18 files in other folders)
